--- a/public/style.css
+++ b/public/style.css
@@ -70,3 +70,13 @@ html, body {
     display: flex;
     flex-direction: row;
   }
+
+  i {
+    font-size: 10px;
+    color: rebeccapurple;
+  }
+
+  i.user-connected {
+    font-size: 10px;
+    color: lightskyblue;
+  }
